; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/peripherals/sdio/host/components/esp_slave/extr_esp_slave.c_esp_slave_write_reg.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/peripherals/sdio/host/components/esp_slave/extr_esp_slave.c_esp_slave_write_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"write_reg: %08X\00", align 1
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_slave_write_reg(i32* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %10 = load i32, i32* @TAG, align 4
  %11 = load i32, i32* %8, align 4
  %12 = call i32 @ESP_LOGV(i32 %10, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = load i32, i32* %7, align 4
  %14 = icmp sge i32 %13, 64
  br i1 %14, label %15, label %17

15:                                               ; preds = %4
  %16 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  store i32 %16, i32* %5, align 4
  br label %32

17:                                               ; preds = %4
  %18 = load i32, i32* %7, align 4
  %19 = icmp sge i32 %18, 28
  br i1 %19, label %20, label %25

20:                                               ; preds = %17
  %21 = load i32, i32* %7, align 4
  %22 = icmp sle i32 %21, 31
  br i1 %22, label %23, label %25

23:                                               ; preds = %20
  %24 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  store i32 %24, i32* %5, align 4
  br label %32

25:                                               ; preds = %20, %17
  %26 = load i32*, i32** %6, align 8
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @HOST_SLCHOST_CONF_W_REG(i32 %27)
  %29 = load i32, i32* %8, align 4
  %30 = load i32*, i32** %9, align 8
  %31 = call i32 @esp_slave_write_byte(i32* %26, i32 %28, i32 %29, i32* %30)
  store i32 %31, i32* %5, align 4
  br label %32

32:                                               ; preds = %25, %23, %15
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local i32 @ESP_LOGV(i32, i8*, i32) #1

declare dso_local i32 @esp_slave_write_byte(i32*, i32, i32, i32*) #1

declare dso_local i32 @HOST_SLCHOST_CONF_W_REG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
